tooltip and overflow functional, dashboard invite cell fixed

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -37,17 +37,22 @@
     border-radius: 20px;
     object-fit: cover;
 }
-
+#preview-container .invite-cell:last-child .user-icon {
+    /* Vos styles spécifiques pour la dernière cellule ici */
+    background-color: rgba(128, 128, 128, 0.589); /* Exemple : changer la couleur de fond en rouge */
+	
+}
 /* Cellule pour inviter nouveaux usuaires */
 .invite-cell {
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin: 10px; 
-    text-align: center;
-    background-color: rgba(255, 255, 255, 0.8);
-    width: 300px; 
-    height: 250px; 
+    text-align: left;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    font-size: 18px;
+    width: 300px;
+    margin: 20px;
+
 }
 
 .invite-cell img {
@@ -63,7 +68,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
-    background-image: url('../img/Wallpaper.jpg');
+    background-image: url('../img/background/default.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
